apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-paperless
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3003
      targetPort: 3003
